WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58821
Don't cast BitmapImageSingleFrameSkia to BitmapImage
https://bugs.webkit.org/show_bug.cgi?id=58821
Summary
Don't cast BitmapImageSingleFrameSkia to BitmapImage
John Bauman
Reported
2011-04-18 13:35:28 PDT
Don't cast BitmapImageSingleFrameSkia to BitmapImage
Attachments
Patch
(2.70 KB, patch)
2011-04-18 13:50 PDT
,
John Bauman
no flags
Details
Formatted Diff
Diff
Patch
(2.72 KB, patch)
2011-04-18 14:01 PDT
,
John Bauman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
John Bauman
Comment 1
2011-04-18 13:50:49 PDT
Created
attachment 90084
[details]
Patch
John Bauman
Comment 2
2011-04-18 13:52:40 PDT
See
http://code.google.com/p/chromium/issues/detail?id=79739
WebKit Review Bot
Comment 3
2011-04-18 13:55:35 PDT
Attachment 90084
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
John Bauman
Comment 4
2011-04-18 14:01:34 PDT
Created
attachment 90090
[details]
Patch
Kenneth Russell
Comment 5
2011-04-18 15:18:15 PDT
Comment on
attachment 90090
[details]
Patch How was the logic error discovered? Would it be possible to add a WebGL layout test to cover this case?
John Bauman
Comment 6
2011-04-18 15:27:11 PDT
Some of the webgl layout tests started crashing due to this bug, after an unrelated change to BitmapImageSingleFrameSkia caused the problem to become visible. I can't really think of a type of test that would deterministically catch this bug.
Kenneth Russell
Comment 7
2011-04-18 15:40:43 PDT
Comment on
attachment 90090
[details]
Patch OK. Let's get this fix in ASAP.
WebKit Commit Bot
Comment 8
2011-04-18 18:35:31 PDT
Comment on
attachment 90090
[details]
Patch Clearing flags on attachment: 90090 Committed
r84213
: <
http://trac.webkit.org/changeset/84213
>
WebKit Commit Bot
Comment 9
2011-04-18 18:35:36 PDT
All reviewed patches have been landed. Closing bug.
Tom Hudson
Comment 10
2011-08-03 10:15:35 PDT
Similar problems cropping up in
https://bugs.webkit.org/show_bug.cgi?id=65063
because the underlying issue - casting to BitmapImage - isn't limited to this one case.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug