2011-04-18  John Bauman  <jbauman@chromium.org>

Reviewed by Kenneth Russell.

        Don't cast BitmapImageSingleFrameSkia to BitmapImage
        https://bugs.webkit.org/show_bug.cgi?id=58821

        BitmapImageSingleFrameSkia has isBitmap return true, but
        can't be cast to a BitmapImage. Instead of using BitmapImage,
        use isOpaque from SkBitmap to determine if the image has alpha.

        No new tests.

        * platform/graphics/skia/GraphicsContext3DSkia.cpp:
        (WebCore::GraphicsContext3D::getImageData):

Canonical link: https://commits.webkit.org/73953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84213 268f45cc-cd09-0410-ab3c-d52691b4dbfc